dynamic question generation

--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,3 @@
 secret_key = "Secret hai bhai"
+GEMINI_API_KEY = "AIzaSyBGIW0oF9yAwb1IS3I_2elV7_8Y7OEWzUc"
+GOOGLE_API_KEY = "AIzaSyBGIW0oF9yAwb1IS3I_2elV7_8Y7OEWzUc"
